--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,22 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --button-color-hover: rgba(255, 0, 112, 0.4);
+  --button-color: #ff0070;
+  --decorated-color: #ff0070;
+  --title-color: #DB00FF;
+  --subtitle-color: #000028;
+  --header-text-color: #000028;
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+}
+
+.theme-dark .tag {
+  display: flex;
 }
