--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,11 @@ h5,
 h6,
 p {
   margin: 0;
+  padding: 0;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
 }
 
 ul {
