--- a/styles/light.css
+++ b/styles/light.css
@@ -9,6 +9,16 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url('../images/cover-image-light.png');
+  --bg-color: #fff1f7;
+  --text-color: #353430;
+  --accent-color: #ff8dcb;
+  --button-color-hover: rgba(50, 49, 45, 0.4);
+  --content-title-color: #353430;
+  --button-color: #353430;
+  --title-color: #ffc2e6;
+  --title-shadow-color: #ff8dcb;
+  --subtitle-color: #353430;
 }
 
 .theme-light .page {
