--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,378 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+/* Стили для основной темы и основной ширины экрана пишите в файле style.css. Ниже в этом же файле вы напишете медиавыражения для адаптива под разные экраны.*/
 
 .page {
+  font-family: var(--content-font-family);
+  font-size: var(--content-font-size);
+  font-weight: var(--content-font-weight);
+  line-height: var(--content-line-height);
+  color: var(--text-color);
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  inline-size: 100%;
+  padding-inline: var(--page-padding);
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
 }
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  margin-block-end: var(--main-margin);
+  block-size: 100vh;
+  min-height: 668px;
+}
+
+/* Стили кнопок меню */
+
+.header__theme-menu {
+  justify-self: end;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding-block-end: 4px; /* отступ снизу? */
+  color: var(--button-color);
+  font-weight: var(--content-font-weight);
+  font-size: var(--content-font-size);
+  line-height: 100%;
+  text-align: center;
+  background-color: transparent;
+  text-transform: lowercase;
+  min-inline-size: 70px;
+  min-block-size: 26px;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--button-color-hover);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--button-color);
+  outline: none;
+}
+
+.header__theme-menu-button:active {
+  border: 1px solid var(--button-color);
+  pointer-events: none;
+} 
+
+/* Декоративные уголки header */
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  border-inline-end: 1px solid var(--decorated-color);
+  border-block-start: 1px solid var(--decorated-color);
+  inset-block-start: var(--page-padding);
+  inset-inline-end: var(--page-padding);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  border-inline-start: 1px solid var(--decorated-color);
+  border-block-end: 1px solid var(--decorated-color);
+  inset-block-end: var(--page-padding);
+  inset-inline-start: var(--page-padding);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+/* Декоративная надпись REC */
+.header__tag {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  font-family: inherit;
+  color: var(--accent-color);
+  line-height: 139%;
+  text-transform: uppercase;
+  inset-block-start: var(--page-padding);
+  inset-inline-end: calc(9px + var(--page-padding));
+  /* Показывать только в тёмной теме */
+  /*display: none;*/
+}
+
+.header__tag::after {
+  content: '';
+  display: block;
+  inline-size: 9px;
+  block-size: 9px;
+  margin-inline-start: 10px;
+  border-radius: 100%;
+  background: var(--accent-color);
+  box-shadow: 0 0 4px 2px var(--accent-color);
+}
+
+/* Заголовок */
+.title {
+  font-weight: var(--header-text-weight);
+  line-height: 0.83;
+  color: var(--title-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+}
+
+.header__title {
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header__subtitles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  grid-row: 3;
+  justify-self: center;
+  align-self: center;
+  gap: 0;
+}
+
+.header__subtitles-item {
+  font-size: var(--content-font-size);
+  font-weight: var(--subtitle-text-weight);
+  color: var(--subtitle-color);
+  max-width: 100%;
+  align-self: center;
+  border-radius: 0;
+  margin: 0;
+  width: fit-content;
+}
+
+/* Декоративный фон для подзаголовков */
+.title-decor {
+  background: var(--accent-color);
+  color: var(--subtitle-color);}
+  
+  /* Декоративные уголки footer */
+  
+  .footer.decorated-zone {
+    position: relative;
+    padding: 10px;
+  }
+  
+  .footer.decorated-zone::before,
+  .footer.decorated-zone::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    border: 2px solid var(--decorated-color);
+  }
+  .footer.decorated-zone::before {
+    top: 0;
+    right: 0;
+    border-left: none;
+    border-bottom: none;
+  }
+  .footer.decorated-zone::after {
+    left: 0;
+    bottom: 0;
+    border-right: none;
+    border-top: none;
+  }
+  
+/* Стили для main */
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: var(--section-gap);
+}
+
+.content_section {
+  display: grid;
+  gap: var(--content-section-gap);
+}
+
+.article-title {
+  color: var(--accent-color);
+  font-size: var(--subtitle-text-weight);
+}
+
+.content__block-list {
+  display: grid;
+  gap: var(--content-section-gap);
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  gap: var(--article-section-gap);
+}
+
+.content {
+  font-weight: var(--content-font-weight);
+}
+
+.link {
+  text-shadow: 2px 2px 0 var(--accent-color);
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+.link:focus {
+  outline: none;
+}
+.link:focus-visible {
+  outline: 1px solid var(--text-color);
+}
+
+.list__title {
+  font-weight: var(--content-font-weight);
+}
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  gap: var(--galery-gap);
+}
+
+.gallery__items {
+  display: grid;
+  gap: var(--galery-gap);
+  grid-auto-flow: dense;
+}
+
+.gallery__image {
+  inline-size: 100%;
+  block-size: 100%;
+  max-block-size: 100%;
+  object-fit: cover;
+}
+
+/* Стили футера */
+
+.footer {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  margin-block-start: var(--main-margin);
+  block-size: 100vh;
+  min-height: 668px;
+}
+
+.footer__title {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+/* Стили для адаптива */
+  
+  @media (width >= 768px) {
+    .page {
+      padding-inline: 20px;
+    }
+
+    .header {
+      grid-template-columns: 1fr 1fr;
+      min-height: 1024px;
+    }
+
+    .header__theme-menu {
+      grid-column: 1 / 3;
+      grid-row: 1;
+    }
+
+    .header__title {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+      grid-column: 1 / 3;
+      grid-row: 2 /3;
+      margin-inline-start: -20px;
+    }
+
+    .header__subtitles {
+      grid-column: 2 / 3;
+      grid-row: 3;
+    }
+
+    .content_section {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    .why-article {
+      grid-column: 2 / 4;
+    }
+
+    .what-article {
+      grid-column: 1 / -1;
+    }
+
+    .how-article {grid-column: 2 / 4;}
+
+    .gallery__items {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    .gallery__image:nth-child(1) {
+      grid-column: 1 / 3;
+    }
+    
+    .gallery__image:nth-child(2) {
+      grid-column: 3;
+      grid-row: 1 / 3;
+    }
+    
+    .gallery__image:nth-child(3) {
+      grid-column: 1;
+      grid-row: 2 / 4;
+    }
+    
+   /* .gallery__image:nth-child(4) {}*/
+   
+   .gallery__image:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3;
+   }
+
+   .footer {
+    min-height: 1024px;
+  }
+
+  }
+
+  @media (width >= 1024px) {
+    .header {
+      min-height: 768px;
+    }
+
+    .header__theme-menu {
+      justify-self: center;
+      align-self: self-start;
+    }
+    
+    .header__theme-menu-list {
+      flex-direction: row;
+    }
+
+    .what-article {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .footer {
+      min-height: 768px;
+    }
+  }
