--- a/styles/light.css
+++ b/styles/light.css
@@ -4,7 +4,7 @@
   переключая тему
 */
 
-:root.theme-light {
+.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
@@ -21,6 +21,32 @@
   --subtitle-color: #353430;
 }
 
-.theme-light .page {
+.theme_light.page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  --bg-image: url('../images/cover-image-light.png');
+  --bg-color: #fff1f7;
+  --text-color: #353430;
+  --accent-color: #ff8dcb;
+  --button-color-hover: rgba(50, 49, 45, 0.4);
+  --content-title-color: #353430;
+  --button-color: #353430;
+  --title-color: #ffc2e6;
+  --title-shadow-color: #ff8dcb;
+  --subtitle-color: #353430;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    /* Дублируем переменные светлой темы */  
+    --bg-image: url('../images/cover-image-light.png');
+  --bg-color: #fff1f7;
+  --text-color: #353430;
+  --accent-color: #ff8dcb;
+  --button-color-hover: rgba(50, 49, 45, 0.4);
+  --content-title-color: #353430;
+  --button-color: #353430;
+  --title-color: #ffc2e6;
+  --title-shadow-color: #ff8dcb;
+  --subtitle-color: #353430;  
+  }
 }
