--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,7 +4,7 @@
   переключая тему
 */
 
-.theme_dark {
+:root.theme-dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
@@ -21,10 +21,10 @@
   --header-text-color: #000028;
 }
 
-.theme_dark .page {
+.theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
 }
 
-.theme_dark .tag {
+.theme-dark .tag {
   display: flex;
 }
