--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,13 @@ body {
   margin: 0 auto;
 }
 
+.header,
+.main,
+.footer {
+  padding-inline: var(--page-padding);
+  max-width: 100vw;
+}
+
 h1,
 h2,
 h3,
