--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@
   background-size: cover;
   background-attachment: fixed;
   inline-size: 100%;
-  padding-inline: var(--page-padding);
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
 }
 
@@ -23,8 +22,7 @@
   grid-template-rows: 1fr min-content 1fr;
   align-items: center;
   margin-block-end: var(--main-margin);
-  block-size: 100vh;
-  min-height: 668px;
+  height: max(100vh, 668px);
 }
 
 /* Стили кнопок меню */
@@ -67,9 +65,8 @@
   outline: none;
 }
 
-.header__theme-menu-button:active {
+.header__theme-menu-button_active {
   border: 1px solid var(--button-color);
-  pointer-events: none;
 } 
 
 /* Декоративные уголки header */
@@ -164,42 +161,15 @@
 /* Декоративный фон для подзаголовков */
 .title-decor {
   background: var(--accent-color);
-  color: var(--subtitle-color);}
+  color: var(--subtitle-color);
+}
   
-  /* Декоративные уголки footer */
+  /* Стили для main */
   
-  .footer.decorated-zone {
-    position: relative;
-    padding: 10px;
-  }
-  
-  .footer.decorated-zone::before,
-  .footer.decorated-zone::after {
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    border: 2px solid var(--decorated-color);
-  }
-  .footer.decorated-zone::before {
-    top: 0;
-    right: 0;
-    border-left: none;
-    border-bottom: none;
-  }
-  .footer.decorated-zone::after {
-    left: 0;
-    bottom: 0;
-    border-right: none;
-    border-top: none;
-  }
-  
-/* Стили для main */
-
-.main {
-  display: flex;
-  flex-direction: column;
-  gap: var(--section-gap);
+  .main {
+    display: flex;
+    flex-direction: column;
+    gap: var(--section-gap);
 }
 
 .content_section {
@@ -272,100 +242,120 @@
   justify-items: center;
   align-items: center;
   margin-block-start: var(--main-margin);
-  block-size: 100vh;
-  min-height: 668px;
+  height: max(100vh, 668px);
+}
+
+/* Декоративные уголки footer */
+
+.footer.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  border-inline-end: 1px solid var(--decorated-color);
+  border-block-start: 1px solid var(--decorated-color);
+  inset-block-start: var(--page-padding);
+  inset-inline-end: var(--page-padding);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  border-inline-start: 1px solid var(--decorated-color);
+  border-block-end: 1px solid var(--decorated-color);
+  inset-block-end: var(--page-padding);
+  inset-inline-start: var(--page-padding);
+  inline-size: 25px;
+  block-size: 25px;
 }
 
 .footer__title {
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
+
 /* Стили для адаптива */
-  
-  @media (width >= 768px) {
-    .page {
-      padding-inline: 20px;
-    }
 
-    .header {
-      grid-template-columns: 1fr 1fr;
-      min-height: 1024px;
-    }
-
-    .header__theme-menu {
-      grid-column: 1 / 3;
-      grid-row: 1;
-    }
-
-    .header__title {
-      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      grid-column: 1 / 3;
-      grid-row: 2 /3;
-      margin-inline-start: -20px;
-    }
-
-    .header__subtitles {
-      grid-column: 2 / 3;
-      grid-row: 3;
-    }
-
-    .content_section {
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    .why-article {
-      grid-column: 2 / 4;
-    }
-
-    .what-article {
-      grid-column: 1 / -1;
-    }
-
-    .how-article {grid-column: 2 / 4;}
-
-    .gallery__items {
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    .gallery__image:nth-child(1) {
-      grid-column: 1 / 3;
-    }
-    
-    .gallery__image:nth-child(2) {
-      grid-column: 3;
-      grid-row: 1 / 3;
-    }
-    
-    .gallery__image:nth-child(3) {
-      grid-column: 1;
-      grid-row: 2 / 4;
-    }
-    
-   /* .gallery__image:nth-child(4) {}*/
-   
-   .gallery__image:nth-child(5) {
-    grid-column: 2 / 4;
-    grid-row: 3;
-   }
-
-   .footer {
+@media (width >= 768px) {
+  .header {
+    grid-template-columns: 1fr 1fr;
     min-height: 1024px;
   }
-
+  
+  .header__theme-menu {
+    grid-column: 1 / 3;
+    grid-row: 1;
   }
+  
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    margin-inline-start: -20px;
+  }
+  
+  .header__subtitles {
+    grid-column: 2 / 3;
+    grid-row: 3;
+  }
+  
+  .content_section {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  .why-article {
+    grid-column: 2 / 4;
+    }
+  
+  .what-article {
+    grid-column: 1 / -1;
+    }
+
+  .how-article {
+    grid-column: 2 / 4;
+    }
+
+  .gallery__items {
+    grid-template-columns: repeat(3, 1fr);
+    }
+
+  .gallery__image:nth-child(1) {
+    grid-column: 1 / 3;
+    }
+    
+  .gallery__image:nth-child(2) {
+    grid-column: 3;
+    grid-row: 1 / 3;
+    }
+    
+  .gallery__image:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2 / 4;
+    }
+
+   
+  .gallery__image:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3;
+  }
+  
+  .footer {
+    min-height: 1024px;
+  }
+}
 
   @media (width >= 1024px) {
     .header {
       min-height: 768px;
     }
-
-    .header__theme-menu {
-      justify-self: center;
-      align-self: self-start;
-    }
     
     .header__theme-menu-list {
       flex-direction: row;
+      padding-top: var(--page-padding);
     }
 
     .what-article {
