--- a/styles/style.css
+++ b/styles/style.css
@@ -140,7 +140,7 @@
 .header__subtitles {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   grid-row: 3;
   justify-self: center;
   align-self: center;
@@ -152,10 +152,11 @@
   font-weight: var(--subtitle-text-weight);
   color: var(--subtitle-color);
   max-width: 100%;
-  align-self: center;
+  /*align-self: center;*/
   border-radius: 0;
   margin: 0;
   width: fit-content;
+  text-align: left;
 }
 
 /* Декоративный фон для подзаголовков */
@@ -353,6 +354,11 @@
       min-height: 768px;
     }
     
+    .header__theme-menu {
+      justify-self: center;
+      align-self: self-start;
+    }
+
     .header__theme-menu-list {
       flex-direction: row;
       padding-top: var(--page-padding);
