--- a/styles/variables.css
+++ b/styles/variables.css
@@ -17,7 +17,7 @@
   --subtitle-text-weight: 700;
   --header-text-color: #000028;
   --header-text-weight: 700;
-  --content-font-family: 'IBM Plex Mono', monospace;
+  --content-font-family: 'IBM Plex Mono', sans-serif;
   --content-font-size: 18px;
   --content-line-height: 23.4px;
   --content-font-weight: 400;
