--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,6 +13,7 @@
   --bg-color: #000028;
   --text-color: #f1b2ce;
   --accent-color: #ff0070;
+  --decorated-color: #ff0070;
   --button-color-hover: rgba(255, 0, 112, 0.4);
   --button-color: #ff0070;
   --decorated-color: #ff0070;
