--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,7 +5,7 @@
 
 :root {
   --bg-image: url(../images/cover-image-dark.png);
-  --bg-color: #000028;;
+  --bg-color: #000028;
   --text-color: #f1b2ce;
   --accent-color: #ff0070;
   --decorated-color: #ff0070;
