--- a/styles/dark.css
+++ b/styles/dark.css
@@ -18,6 +18,7 @@
   --button-color: #ff0070;
   --decorated-color: #ff0070;
   --title-color: #DB00FF;
+  --article-title-color: #ff0070;
   --subtitle-color: #000028;
   --header-text-color: #000028;
 }
