--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,6 +14,7 @@
   --decorated-color: #ff0070;
   --title-color: #DB00FF;
   --title-weight: 700;
+  --article-title-color: #ff0070;
   --subtitle-color: #000028;
   --header-text-color: #000028;
   --content-font-family: 'IBM Plex Mono', sans-serif;
