--- a/styles/light.css
+++ b/styles/light.css
@@ -41,6 +41,7 @@
    --decorated-color: #353430;
    --title-color: #ffc2e6;
    --title-shadow-color: #ff8dcb;
+   --article-title-color: #353430;
    --subtitle-color: #353430;
   }
 
